--- a/test/example.html
+++ b/test/example.html
@@ -6,7 +6,7 @@
     <script src="../build/stellar-wallet.js"></script>
     <script type="application/javascript">
       StellarWallet.init({
-        server: 'http://localhost:3000'
+        server: 'http://localhost:3000/v2'
       });
       // Login
       StellarWallet.login({
