--- a/test/example.html
+++ b/test/example.html
@@ -9,16 +9,35 @@
         server: 'http://localhost:3000/v2'
       });
       // Login
-      StellarWallet.login({
-        username: 'username',
-        walletId: 'wallet_id',
-        totpCode: '012345'
+//      StellarWallet.login({
+//        username: 'joe',
+//        walletId: 'joeswallet'//,
+//        //totpCode: '012345'
+//      }).then(function(wallet) {
+//        console.log(wallet);
+//      }).catch(StellarWallet.errors.WalletNotFound, function(e) {
+//        console.error('Wallet not found');
+//      }).catch(StellarWallet.errors.Forbidden, function(e) {
+//        console.error('Forbidden');
+//      });
+      // Create Wallet
+      StellarWallet.createWallet({
+        username: "joe"+Math.random()+'@hostname.org',
+        password: "abc",
+        publicKey: "e335c4a9416edaa635156d3114e4a21c790c332732c5624f067f4f8a1ff19a31",
+        mainData: {
+          key: 'val'
+        },
+        keychainData: {
+          publicKey: "abc",
+          privateKey: "priv"
+        }
       }).then(function(wallet) {
         console.log(wallet);
-      }).catch(StellarWallet.errors.WalletNotFound, function(e) {
-        console.error('Wallet not found');
-      }).catch(StellarWallet.errors.Forbidden, function(e) {
-        console.error('Forbidden');
+      }).catch(StellarWallet.errors.MissingField, function(e) {
+        console.error('Missing field: '+e.field);
+      }).catch(StellarWallet.errors.ConnectionError, function(e) {
+        console.error('Connection Error');
       });
     </script>
   </body>
